--- a/0_get_region.ipynb
+++ b/0_get_region.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "def get_region_mask(area, grid, threshold):\n",
     "    \"\"\" Get region mask based on burned area threshold \"\"\"\n",
-    "    def aggregate_grid(ds, lat_des, lon_des, lat_name='lat', lon_name='lon'):\n",
+    "    def aggregate_grid(ds, lat_des, lon_des, lat_dim='lat', lon_dim='lon'):\n",
     "        def _get_bin_edges(bins):\n",
     "            dbin = np.diff(bins)/2\n",
     "            bin_edges = np.concatenate(([bins[0]-dbin[0]], \n",
@@ -115,19 +115,21 @@
     "\n",
     "        lat_edges = _get_bin_edges(lat_des)\n",
     "        lon_edges = _get_bin_edges(lon_des)\n",
-    "        lat_in = np.where((lat_edges < max(ds[lat_name].values)) & (lat_edges > min(ds[lat_name].values)))[0]\n",
-    "        lon_in = np.where((lon_edges < max(ds[lon_name].values)) & (lon_edges > min(ds[lon_name].values)))[0]\n",
+    "        lat_in = np.where((lat_edges < max(ds[lat_dim].values)) & \n",
+    "                          (lat_edges > min(ds[lat_dim].values)))[0]\n",
+    "        lon_in = np.where((lon_edges < max(ds[lon_dim].values)) & \n",
+    "                          (lon_edges > min(ds[lon_dim].values)))[0]\n",
     "        lat_edges = lat_edges[lat_in]\n",
     "        lat_des = lat_des[lat_in[:-1]]\n",
     "        lon_edges = lon_edges[lon_in]\n",
     "        lon_des = lon_des[lon_in[:-1]]\n",
     "\n",
-    "        ds_cpy = ds.copy()\n",
-    "        ds_sum = ds_cpy.groupby_bins(lon_name, lon_edges, labels=lon_des).sum(lon_name, skipna=False) \\\n",
-    "                       .groupby_bins(lat_name, lat_edges, labels=lat_des).sum(lat_name, skipna=False)\n",
+    "        ds_sum = ds.copy().groupby_bins(\n",
+    "            lon_dim, lon_edges, labels=lon_des).sum(lon_dim, skipna=False).groupby_bins(\n",
+    "            lat_dim, lat_edges, labels=lat_des).sum(lat_dim, skipna=False)\n",
     "\n",
-    "        return (ds_sum).rename({lon_name+'_bins': lon_name,\n",
-    "                                lat_name+'_bins': lat_name})\n",
+    "        return (ds_sum).rename({lon_dim+'_bins': lon_dim,\n",
+    "                                lat_dim+'_bins': lat_dim})\n",
     "    \n",
     "    area_agg = aggregate_grid(area, grid['lat'].values, grid['lon'].values)\n",
     "    return xr.where(area_agg / grid.area > (threshold/100), 1, 0)"
