remove generation of figures for reviewers

--- a/3_historical_precedent.ipynb
+++ b/3_historical_precedent.ipynb
@@ -10,6 +10,7 @@
     "### Time taken: < 1 min \n",
     "\n",
     "#### This notebook includes the creation of Fig 2 and Fig S1\n",
+    "\n",
     "------"
    ]
   },
@@ -979,7 +980,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pangeo_base)",
+   "display_name": "Python (pangeo)",
    "language": "python",
    "name": "pangeo"
   },
