--- a/5_likelihoods.ipynb
+++ b/5_likelihoods.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# Calculcate the likelihoods of exceedance\n",
     "\n",
-    "### Time taken: ~ 1 mins if reading bootstrapped data from disk or ~? hours to redo bootstrapping\n",
+    "### Time taken: ~ 1 mins if reading bootstrapped data from disk or ~9 hours to redo bootstrapping\n",
     "\n",
-    "#### This notebook includes the creation of Figs 5 and 8"
+    "#### This notebook includes the creation of Figs 5 and 8\n",
+    "\n",
+    "------"
    ]
   },
   {
