--- a/6_conditioning.ipynb
+++ b/6_conditioning.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "### Time taken: < 1 min\n",
     "\n",
-    "#### This notebook includes the creation of Figs 6"
+    "#### This notebook includes the creation of Figs 6 and 7\n",
+    "\n",
+    "------"
    ]
   },
   {
